Revision history for Mojolicious-Plugin-LinkEmbedder

0.11
       * Fix Video::Dbtv iframe src
       * Fix handling https://www.youtube.com/user/jsconfeu
       * Add support for git.io links
       * Add support for github commit messages

0.10     Fri Oct 17 14:07:37 2014
       * Add LinkEmbedder::Text::Github
       * Fix embedding Youtube videos over HTTPS
       * Fix embedding Ted videos over HTTPS
       * Change to embedding tweets using javascript

0.09     Sun Oct 12 20:46:49 2014
       * Change link_embedder_text_gist_github_x() javascript methods to public

0.08     Sun Oct 12 19:37:18 2014
       * Add support for scraping information from a HTML page
         - Understands Open Graph and Twitter cards
       * Add support for returning $self from embed_link() helper
       * Add "ua" attribute to ::Link objects
       * Add TO_JSON() method to ::Link objects

0.07     Thu Aug  7 09:14:00 2014
       * Add Imgur support, closes #1 (jberger)

0.06     Tue Jun 10 18:43:30 2014
       * Allow custom stylesheet for Text::GistGithub
       * Add DISCLAIMER section
       * Add COPYRIGHT section

0.05     Tue Jun 10 17:16:41 2014
       * Fix embedding Text::GistGithub

0.04     Wed Apr  2 20:14:02 2014
       * Fix embedding tweets

0.03     Mon Feb 17 15:51:14 2014
       * Will only render parseable URLs

0.02     Fri Feb 14 10:33:18 2014
       * Add optional default action

0.01     Fri Feb 14 10:18:47 2014
       * Add embed_link() helper
       * Add LinkEmbedder::Default
       * Add LinkEmbedder::Youtube