@@ -49,16 +49,18 @@ has title       => '';
 has type        => '';
 has video       => '';
 
+sub _cache_attributes {
+  shift->SUPER::_cache_attributes, qw( canon_url description image title type video );
+}
+
 =head1 METHODS
 
 =head2 learn
 
-Gets the file imformation from the page meta information
-
 =cut
 
 sub learn {
-  my ($self, $cb, @cb_args) = @_;
+  my ($self, $c, $cb) = @_;
 
   $self->ua->get(
     $self->url,
@@ -66,7 +68,7 @@ sub learn {
       my ($ua, $tx) = @_;
       my $dom = $tx->res->dom;
       $self->_tx($tx)->_learn_from_dom($dom) if $dom;
-      $cb->(@cb_args);
+      $self->$cb;
     },
   );
 
@@ -117,6 +119,7 @@ sub _learn_from_dom {
   $self->type($e->{content}) if $e = $dom->at('meta[property="og:type"]') || $dom->at('meta[name="twitter:card"]');
   $self->video($e->{content}) if $e = $dom->at('meta[property="og:video"]');
   $self->canon_url($e->{content}) if $e = $dom->at('meta[property="og:url"]') || $dom->at('meta[name="twitter:url"]');
+  $self->media_id($self->canon_url) if $self->canon_url and !defined $self->{media_id};
 }
 
 =head1 AUTHOR
